--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,14 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_icons:
+    android: true
+    ios: true
+    image_path: "assets/icons/logo.png"
+
 
 
 
@@ -53,6 +60,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icons/
 
 
 
