--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   http: ^1.5.0
   cached_network_image: ^3.4.1
   skeletonizer: ^2.1.1
-
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
