--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cached_network_image: ^3.4.1
   skeletonizer: ^2.1.1
   flutter_bloc: ^9.1.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
